# mcp-ai-interactive

./: .gitignore  README.md  SYSTEM_PROMPT_Claude-4-sonnet-max.txt  SYSTEM_PROMPT_Claude-4-sonnet-thinking.txt  pyproject.toml  requirements.txt  rule_for_ai_EN.txt  rule_for_ai_VI.txt
ai_interaction_tool/: __main__.py  cli.py  config.json.bak  server.py
ai_interaction_tool/core/: dialog.py
ai_interaction_tool/ui/: image_attachment.py  styles.py
ai_interactive_tool/: __init__.py  __main__.py  config.json.bak  constants.py  description.py  engine.py  server.py
ai_interactive_tool/core/: __init__.py  config.py  dialog.py  mcp_handler.py  response_formatter.py
ai_interactive_tool/ui/: __init__.py  file_dialog.py  file_tree.py  image_attachment.py  image_viewer.py  styles.py
ai_interactive_tool/utils/: __init__.py  file_utils.py  image_processing.py  translations.py
