[project]
name = "mcp-server-ai-interactive"
version = "0.1.0"
description = "MCP Server for AI Interaction Tool - provides AI interaction capabilities via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.6.15",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "idna>=3.10",
    "markdown-it-py>=3.0.0",
    "mcp>=1.9.4",
    "mdurl>=0.1.2",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pygments>=2.19.1",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "sse-starlette>=2.3.6",
    "starlette>=0.47.0",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.34.3",
]

[project.scripts]
mcp-server-ai-interactive = "ai_interaction_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_interaction_tool"]
